
CHANGES
==============

UP
---

    - postgresql maintenance and doc/UI improvment
    - plone3 refactoring

        - better separation between buildout logic and semantic
        - fix buildout part ordering

    - add --reload option for the pasteinitd profile
    - pgsql 8.4 support
    - zope3 python version upgraded
    - add openldap profile
    - add mysql profile

1.3
----

        - fix failed merge

1.2
-------

    - remove some useless variables on pgsql templates
    - fix django url

1.1
-------

    - PloneArticle fix

1.0
------

    - Only the django, zope3, plone3, plone25, pylons templates remains
    - paste-initd is a now comer
    - all templates have now an optionnal support for minitage
    - its stabilized with other minitage components
    - templates are all documented on http://www.minitage.org

0.22
------

    - Renew plone3 template, desacticate deprecated ones.

0.20->0.21
-----------

    - Fix in pgsql

0.19
-------

    - Fix effective user on pgsql initd


0.13->0.18
-----------

    - paste-initd fixs

0.12
-------

    - add the pasteinitd profil to create profils for paste init scripts.


0.11
-------

    - refactor zope3 template


0.10
--------

    - add plone 32 project

0.8
--------

    - add varnish2 profile

0.7
--------

    - ZSH compat.

0.6
--------

    - Adding wrappers for postgresql
0.5
--------

    - Django maintenance

0.2  - 0.4
------------
    - Maintenance

0.2  - 0.3
------------
    - Improvments to the pgsql template due to pgsql 8.3 release changes.

0.1
------------
    - add plone32svn

0.0.1_alpha46
---------------
     - add a INS env. variable pointing to the current project to minitage.env
      profil.

0.0.1_alpha46
---------------
    - add zope2 project template
    - remove unused product from plone31zeo

0.0.1_alpha45
---------------
    - remove omelette by default for plone3 templates

0.0.1_alpha44
---------------
    - multiple fix for setuptools

0.0.1_alpha43
---------------