@@ -10,6 +10,13 @@
 # The parts in this buildout extends/overwrite this file, you can read it to get additionnal documentation.
 # You must enter speicfic project settings in the etc/${project}.cfg file.
 #echo '#\n'
+# KGS
+# We provide a part to generate the etc/${project}-kgs.cfg file.
+# This will allow you to freeze software versions known to work with your project and make reproducible environment.
+# This file will be generated the first time that you run buildout.
+# To un it, just runbin/buildout -vvvvvvv install kgs
+# To unlock the versions, comment out the according statement "etc/${project}-kgs}.cf gin the extends option of the buildout section below.
+#echo '#\n'
 # FOR RELSTORAGE SUPPORT
 # * We use the ZODB as an egg which is patched during installation, please see
 # the zoopy section and also the minitage.recipe documentation on patching an
@@ -38,15 +45,10 @@
 # the ${project}.cfg file can be generated/updated via the kgs part, it will fix all
 # eggs versions used.
 extends=
-    etc/plone3.versions.cfg
-    etc/plone3.buildout.cfg
-    etc/${project}-kgs.cfg
     etc/${project}.cfg
-    etc/minitage.cfg
-#if $with_sgdcg:
-    etc/dancing.cfg
-#end if
     etc/${mode}.cfg
+    etc/minitage.cfg
+parts=
 #if $mode != 'zeo':
 #   etc/zeo.cfg
 #end if
