@@ -16,8 +16,6 @@ ctypes=1.0.2
 [instance]
 verbose-security = on
 debug-mode=ON
-event-log-level=INFO
-z2-log-level=INFO
 #if $linux:
 #zcml+=collective.autorestart
 #end if
