@@ -1,9 +1,3 @@
 
-[instance]
-products=
-extra-paths=
-
-[zopepy]
-eggs=
 
 
